# roboticsII-project

./: .gitignore  README.md  danger_exit_detection  frames.gv  location_provider  safe_exit_detection  safe_exit_detection.py
config/: costmap.yaml  path_planner.yaml
exit_detection/: package.xml
exit_detection/exit_detection/: danger_exit_detection.py  location_provider.py
install/: local_setup.sh  setup.sh
install/exit_detection/lib/exit_detection/: joy_safety_ctrl  location_provider_node  safe_exit_detection_node  wheelodom_tf
install/exit_detection/share/exit_detection/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/exit_detection/share/exit_detection/launch/: danger_exit_detection_launch.py  location_provider.launch.py
install/explore_lite/share/explore_lite/: package.bash  package.zsh
install/explore_lite_msgs/include/explore_lite_msgs/msg/: explore_status.h  explore_status.hpp  rosidl_generator_c__visibility_control.h  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  (+1 more)
install/explore_lite_msgs/share/explore_lite_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.sh  package.xml  package.zsh
install/map_generation/lib/map_generation/: map_generation_node
install/map_generation/share/map_generation/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/map_generation/share/map_generation/launch/: nav2_launch.py  slam_launch.py
install/nav2_wfd/lib/nav2_wfd/: explore
install/nav2_wfd/share/nav2_wfd/: package.bash  package.sh  package.zsh
install/nav2_wfd_tf/lib/nav2_wfd_tf/: explore
install/nav2_wfd_tf/share/nav2_wfd_tf/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/path_generation/lib/path_generation/: path_generation_node
install/path_generation/share/path_generation/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/path_generation/share/path_generation/config/: costmap.yaml  path_planner.yaml
install/robotics_utils/share/robotics_utils/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
launch/: planning.launch.py
log/: latest_build
map_generation/: package.xml  setup.py
map_generation/launch/: explore_lite_launch.py
path_generation/: setup.py
path_generation/launch/: planning.launch.py
robotics_utils/: setup.py
src/exit_detection/: package.xml  setup.cfg  setup.py
src/exit_detection/exit_detection/: danger_exit_detection.py  location_provider.py  navigate_to_saved_pose_node  navigate_to_saved_pose_node.py  safe_exit_detection.py  translate_to_map  translate_to_map.py
src/exit_detection/launch/: car_camera_proplus_bringup_launch.py  exit_detection.launch.py  navigate_to_saved_pose_launch.py  safe_exit_detection.launch.py  translate_to_map_launch.py
src/map_generation/: package.xml  setup.py
src/map_generation/config/: dwa_nav_params.yaml  x3_config.yaml
src/map_generation/launch/: map_generation_launch.py  nav2_launch.py  slam_launch.py
src/nav2_wfd/: setup.py
src/nav2_wfd/launch/: wavefront_frontier_launch.py
src/nav2_wfd/nav2_wfd/: wavefront_frontier.py
src/nav2_wfd_tf/: setup.cfg  setup.py
src/nav2_wfd_tf/launch/: wavefront_frontier_launch.py
src/path_generation/: setup.cfg
src/robotics_utils/: package.xml  setup.cfg
src/yahboomcar_nav/: package.xml  setup.py
utils/: math.py
yahboomcar_nav/launch/: laser_bringup_launch.py
(+33 files in other folders)
