<?xml version="1.0"?>
<package format="3">
  <name>exit_detection</name>
  <version>0.0.1</version>
  <description>Exit detection node to find feasible exits in an uncertain environment</description>
  <maintainer email="you@email.com">NST</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>message_filters</depend>
  <depend>robotics_utils</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>