<?xml version="1.0"?>
<package format="3">
  <name>robotics_utils</name>
  <version>0.0.1</version>
  <description>Shared math utilities for robotics nodes</description>
  <maintainer email="you@email.com">NST</maintainer>
  <license>MIT</license>

  <depend>python3-numpy</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>