<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yahboomcar_nav</name>
  <version>0.1.0</version>
  <description>Yahboom ROSMASTER X3 bringup and LiDAR launch files</description>
  <maintainer email="wangt17@rpi.edu">Tong Wang</maintainer>
  <license>MIT</license>

  <exec_depend>yahboomcar_bringup</exec_depend>
  <exec_depend>sllidar_ros2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
