<?xml version="1.0"?>
<package format="3">
  <name>path_generation</name>
  <version>0.0.1</version>
  <description>Path generation node using Nav2 SmacPlannerHybrid</description>
  <maintainer email="you@email.com">NST</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>nav2_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_smac_planner</depend>
  <depend>nav2_planner</depend>
  <depend>nav2_costmap_2d</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>